--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,14 @@ body {
     grid-template-rows: 1fr;
 }
 
+tr.active {
+    background-color: #ddffdd;
+}
+
+button {
+    min-width: 24px;
+}
+
 @media print {
     .App {
         grid-template-columns: 1fr;
@@ -21,4 +29,8 @@ body {
     .noprint {
         display: none;
     }
+}
+
+table td {
+    border-bottom: solid 1px lightgray;
 }
