--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,11 @@ button {
 }
 
 @media print {
+    * {
+        font-size: 12px;
+    }
     .App {
-        grid-template-columns: 1fr;
+        display: block;
     }
     table {
         width: auto;
